# AdaptiveStreaming

./: .gitignore  README.md.txt
BandwidthTest/: .project
BandwidthTest/test/: __init__.py  data
Charts/: DCCP_TCP.xlsx  audiovideo.xlsx
Configs/: Switch.config.txt
Libdash/libdash/: CMakeLists.txt  libdash.sln
Libdash/libdash/client/: Adaptation.hpp  CMakeLists.txt  Client.cpp  Downloader.hpp  client.vcxproj  client.vcxproj.filters
Papers/: OTHERS.txt
PedoMock/: .project  log.txt  log2.txt  log3.txt  log4.txt
Praca/: aghdpl.cls  appendixA.tex  dodatekA.aux  dodatekA.tex  dodatekB.aux  dodatekB.tex  dodatekB.tex~  formatki.txt  praca.aux  praca.tex  praca.tex~  praca.toc  rozdzial1.aux  rozdzial1.tex  rozdzial2.aux  rozdzial2.tex  rozdzial3.aux  rozdzial3.tex  rozdzial4.aux  rozdzial4.tex  rozdzial5.aux  rozdzial5.tex  rozdzial5.tex~  rozdzial6.aux  rozdzial6.tex  rozdzial6.tex~  rozdzial7.aux  rozdzial7.tex
Praca/uwagi/: 07-05-14.txt  21-05-14.txt
PythonSimulation/: .project
PythonSimulation/src/: Simulation.py  bandwidth1  bandwidth2  bandwidth3  bandwidth4  representation1
Simulation/: .project
Simulation/sim/: __init__.py  bandwidth1  bandwidth2  bandwidth3  bandwidth4  representation1
Tools/D-ITG-2.8.1-r1023-Win/: CHANGELOG  README
University presentations/: PracowniaProblemowa1.ppt  PracowniaProblemowa2.ppt  SeminariumDyplomowe1.ppt  pp2 - recenzja.txt
Various/: ThroughputMeasurement.xlsx
Visualizer/: .project
Visualizer/visualizer/: __init__.py
libdash/: CMakeLists.txt  libdash.sln
libdash/clientdash/: Adaptation.cpp  Buffer.cpp  (+35 more)
(+247 files in other folders)
